# VertexChain

./: .env.example  .hadolint.yaml  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  SECURITY.md  TODO.md  package-lock.json  package.json  renovate.json5
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build-images.yml  ci.yml  container-lint.yml  contracts-docs.yml  dr-test.yml  image-sign.yml  node-matrix.yml  pr-title-lint.yml  renovate.yml  sbom.yml  stale.yml  terraform-plan-matrix.yml  terraform-scan.yml  trivy-scan.yml
Backend/: .env.example  CACHE_CONTROL_IMPLEMENTATION.md  package-lock.json  package.json  tsconfig.json
Backend/src/: app.module.ts  main.ts
Backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  stellar.ts
Backend/src/cache/: cache.module.ts  cache.service.spec.ts  cache.service.ts
Backend/src/config/: configuration.ts
Backend/src/database/: data-source.ts  database.module.ts
Backend/src/gists/: gist.e2e.spec.ts  gist.repository.ts  gists.controller.spec.ts  gists.controller.ts  gists.module.ts  gists.service.spec.ts  gists.service.ts
Backend/src/indexer/: indexer.module.ts  indexer.service.ts
Backend/src/ipfs/: ipfs.service.ts
Backend/src/soroban/: soroban.service.ts
Backend/test/: gists.e2e.spec.ts
Frontend/: .env.example  package-lock.json  package.json
Frontend/e2e/: map.spec.ts
Frontend/src/app/: error.test.tsx  error.tsx  globals.css  layout.tsx  page.tsx
Frontend/src/components/: Map.tsx
analytics/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
analytics/app/: globals.css
analytics/app/comparison/: page.tsx
analytics/app/geographic/: page.tsx
analytics/app/word-cloud/: page.tsx
analytics/components/: Breadcrumbs.tsx  Button.tsx  CommandPalette.tsx  ComparisonTable.tsx  Dropdown.tsx  GeoFence.tsx  Layout.tsx  QueryBuilder.tsx  ReportBuilder.tsx  SegmentBuilder.tsx  Select.tsx  ShortcutsModal.tsx  Tabs.tsx  TopLocationsTable.tsx
analytics/components/charts/: FeatureHeatmap.tsx
analytics/components/ui/: AnnotationModal.tsx  BookmarkButton.tsx  ChartExportCard.tsx  ExcelExportButton.tsx  SearchBar.tsx  WidgetCard.tsx  icons.tsx
analytics/e2e/: regions.spec.ts
analytics/fixtures/: anomaly-series.json
analytics/hooks/: useDateRange.ts
analytics/lib/: anomaly-detection.ts  anomaly.test.ts  anomaly.ts  api.ts  chart-export.ts  db.ts  geofencing.ts  mock-data.ts  query-builder-types.ts  report-builder-types.ts  report.ts
analytics/scripts/: run-anomaly-worker.ts
analytics/workers/: anomaly-worker.ts
charts/vertexchain/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
charts/vertexchain/templates/: NOTES.txt  _helpers.tpl  analytics-deployment.yaml  analytics-hpa.yaml  (+14 more)
contracts/: .gitignore  Cargo.toml  deny.toml
contracts/batch-wallet/: Cargo.toml
contracts/batch-wallet/src/: lib.rs
contracts/gist-registry/: Cargo.toml
contracts/gist-registry/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/multisig/: Cargo.toml
contracts/multisig/src/: lib.rs
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md
infrastructure/ci/: accessibility-checks.yml  dependency-updates.yml  docker-build-pipeline.yml
infrastructure/docker/: backend.Dockerfile  contract-builder.Dockerfile  frontend.Dockerfile  postgres.Dockerfile
infrastructure/docs/: terraform-setup.md
infrastructure/k8s/: backend-deployment.yaml  frontend-deployment.yaml  namespaces.yaml  values.yaml
infrastructure/scripts/: failover.sh  import-issues-create.mjs  import-issues.mjs  verify-image.sh  workspace-select.sh
infrastructure/terraform/: .checkov.baseline  .tfsec.yml  README.md  alb-listeners.tf  alb.tf  backup-plans.tf  cdn-origins.tf  cloudfront.tf  eks-cluster.tf  launch-templates.tf  main.tf  nacls.tf  outputs.tf  providers.tf  rds.tf  redis-parameters.tf  s3-buckets.tf  secrets-manager.tf  security-groups.tf  tags.tf  variables.tf  waf.tf  workspaces.tf
(+80 files in other folders)
