[workspace]
resolver = "2"
members = [
    "gist-registry",
    "multisig",
    "governance",
    "batch-wallet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# IMPORTANT: do not reintroduce a [workspace.dev-dependencies] block here.
# That construct is not valid Cargo syntax and is silently ignored at parse
# time. Member crates must explicitly list `features = ["testutils"]`
# on their own [dev-dependencies] soroban-sdk entry to enable testutils in
# tests (see contracts/governance/Cargo.toml for the canonical pattern).
# See VertexChain PR discussion history for the [workspace.dev-dependencies]
# root cause behind soroban-sdk 22 test-build failures.

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }
# soroban-env-host declares `ed25519-dalek >=2.0.0`, which recently resolves to
# 3.0.0 and breaks ChaCha20Rng / SigningKey::generate in host testutils.
# Pin 2.x so CI stays on the API soroban-env-host 22.1.3 was written for.
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }

# Force every crates.io ed25519-dalek resolution (including soroban-env-host's
# loose `>=2.0.0`) onto 2.1.1. Without this, Cargo can still compile
# soroban-env-host against ed25519-dalek 3.0 while other crates use 2.x.
[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "ed25519-2.1.1", features = ["rand_core"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
