[workspace]
resolver = "2"
members = [
    "gist-registry",
    "multisig",
    "governance",
    "batch-wallet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/VertexChainLabs/VertexChain"
license = "MIT"

# IMPORTANT: do not reintroduce a [workspace.dev-dependencies] block here.
# That construct is not valid Cargo syntax and is silently ignored at parse
# time. Member crates must explicitly list `features = ["testutils"]`
# on their own [dev-dependencies] soroban-sdk entry to enable testutils in
# tests (see contracts/governance/Cargo.toml for the canonical pattern).
# See VertexChain PR discussion history for the [workspace.dev-dependencies]
# root cause behind soroban-sdk 22 test-build failures.

[workspace.dependencies]
# soroban-sdk 22.0.11 depends on soroban-env-host =22.1.3.
# Pin env-host explicitly so `cargo update` cannot silently pull in an
# incompatible version. 22.0.x env-host has a ChaCha20Rng / ed25519-dalek
# rand_core trait mismatch that breaks compilation on Rust stable ≥ 1.82.
soroban-sdk      = { version = "22.0.11", features = ["alloc"] }
soroban-env-host = "=22.1.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
