[package]
name = "batch-wallet"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Batch wallet creation and recovery smart contract for VertexChain on Stellar/Soroban"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
